--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,17 +1,147 @@
+ext.deps = [:]
+
+def deps = [:]
+
+
+def versions = [:]
+versions.android_gradle_plugin = "3.4.0"
+versions.kotlin = "1.3.31"
+versions.core_ktx = "1.1.0-alpha05"
+versions.rx_java = "2.2.8"
+versions.rx_kotlin = "2.3.0"
+versions.rx_android = "2.1.1"
+versions.rx_bindings = "2.2.0"
+versions.dagger2 = "2.22.1"
+versions.material = "1.1.0-alpha05"
+versions.app_compat = "1.1.0-alpha04"
+versions.constraint_layout = "2.0.0-alpha5"
+versions.lifecycle_extensions = "2.1.0-alpha04"
+versions.reyclerview = "1.0.0"
+versions.glide = "4.9.0"
+versions.timber = "4.7.1"
+versions.retrofit = "2.3.0"
+versions.gson = "2.7"
+versions.okhttp = "3.14.1"
+versions.javax_inject = "1"
+/*versions.javax_annotation = "2.0.0"
+versions.javax_inject = "2.0.0"
+versions.androidx_annotation = "2.0.0"*/
+//app_compat_version = "1.1.0-alpha04"
+//material_version = "1.0.0"
+//life_cycle_extensions_version = "2.0.0"
+//androidx_version = '1.0.0-beta01'
+//constraint_layout_version = '1.1.3'
+//rxjava_version = "2.0.2"
+//rxkotlin_version = "2.2.0"
+//rxandroid_version = "2.0.1"
+//javax_inject_version = "1"
+//javax_annotation_version = "1.0"
+//dagger_version = "2.16"
+//glide_version = '4.7.1'
+//android_arch_version = '2.1.0-alpha01'
+//core_testing_version = '2.0.0-beta01'
+
+
+def platform = [:]
+platform.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
+platform.kotlin_gradle_plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+deps.platform = platform
+
+def android = [:]
+android.app_compat = "androidx.appcompat:appcompat:$versions.app_compat"
+android.material = "com.google.android.material:material:$versions.material"
+android.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
+android.lifecycle_extensions = "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle_extensions"
+android.recyclerview = "androidx.recyclerview:recyclerview:$versions.recyclerview"
+//            javaxAnnotation      : "javax.annotation:jsr250-api:${javax_annotation_version}",
+//            javaxInject          : "javax.inject:javax.inject:${javax_inject_version}",
+//            androidAnnotations   : "androidx.annotation:annotation:${androidx_version}",
+
+def libs = [:]
+
+libs.glide = "com.github.bumptech.glide:glide:$versions.glide"
+libs.timber = "com.jakewharton.timber:timber:$versions.timber"
+libs.retrofit = "com.squareup.retrofit2:retrofit:$versions.retrofit"
+libs.retrofit_adapter = "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
+libs.retrofit_gson_converter = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+libs.gson = "com.google.code.gson:gson:$versions.gson"
+libs.okhttp_logger = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp"
+//        okHttp               : "com.squareup.okhttp3:okhttp:${okhttp_version}",
+libs.javax_inject = "javax.inject:javax.inject:$versions.javax_inject"
+
+def rx = [:]
+rx.java = "io.reactivex.rxjava2:rxjava:$versions.rx_java"
+rx.kotlin = "io.reactivex.rxjava2:rxkotlin:$versions.rx_kotlin"
+rx.android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
+rx.bindings = "com.jakewharton.rxbinding2:rxbinding:$versions.rx_bindings"
+//deps.rx = rx
+
+def kotlin = [:]
+kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
+kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
+kotlin.core_ktx = "androidx.core:core-ktx:$versions.core_ktx"
+//deps.kotlin = kotlin
+
+def dagger = [:]
+dagger.runtime = "com.google.dagger:dagger:$versions.dagger2"
+dagger.android = "com.google.dagger:dagger-android:$versions.dagger2"
+dagger.android_support = "com.google.dagger:dagger-android-support:$versions.dagger2"
+dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger2"
+dagger.android_processor = "com.google.dagger:dagger-android-processor:$versions.dagger2"
+//deps.dagger = dagger
+
+def app = [:]
+app.kotlin = kotlin.stdlib
+app.core_ktx = kotlin.core_ktx
+app.app_compat = android.app_compat
+app.material = android.material
+app.recyclerview = android.recyclerview
+app.constraint_layout = android.constraint_layout
+app.lifecycle_extensions = android.lifecycle_extensions
+app.rx_java = rx.java
+app.rx_kotlin = rx.kotlin
+app.rx_android = rx.android
+app.rx_bindings = rx.bindings
+app.javax_inject = libs.javax_inject
+app.dagger = dagger.runtime
+app.dagger_compiler = dagger.compiler
+app.dagger_processor = dagger.android_processor
+app.dagger_android = dagger.android
+app.glide = libs.glide
+app.timber = libs.timber
+app.okhttp_logger = libs.okhttp_logger
+deps.app = app
+
+def domain = [:]
+domain.kotlin = kotlin.stdlib
+domain.rx_java = rx.java
+domain.javax_inject = libs.javax_inject
+deps.domain = domain
+
+def data = [:]
+data.kotlin = kotlin.stdlib
+data.rx_java = rx.java
+data.retrofit = libs.retrofit
+data.retrofit_adapter = libs.retrofit_adapter
+data.retrofit_gson_converter = libs.retrofit_gson_converter
+data.gson = libs.gson
+data.javax_inject = libs.javax_inject
+deps.data = data
+
+ext.deps = deps
 ext {
 
     //Android
     min_sdk_version = 21
     compile_sdk_version = 28
     target_sdk_version = 28
-    kotlin_version = "1.3.30"
-    core_ktx_version = "1.0.1"
-    gradle_plugin_version = "3.4.0"
 
     //Libraries
-    app_compat_version = "1.0.2"
+    app_compat_version = "1.1.0-alpha04"
+    material_version = "1.0.0"
+    life_cycle_extensions_version = "2.0.0"
     androidx_version = '1.0.0-beta01'
-    constraint_layout_version = '1.1.2'
+    constraint_layout_version = '1.1.3'
     rxjava_version = "2.0.2"
     rxkotlin_version = "2.2.0"
     rxandroid_version = "2.0.1"
@@ -21,16 +151,15 @@ ext {
     dagger_version = "2.16"
     gson_version = '2.7'
     okhttp_version = '3.8.0'
-    glide_version = '4.7.1'
     android_arch_version = '2.1.0-alpha01'
     core_testing_version = '2.0.0-beta01'
 
     //Testing
-    junit_version = "4.12"
+    junit_version = '4.13-beta-2'
     assert_version = "3.8.0"
     mockito_kotlin_version = '1.5.0'
     truth_version = "0.41"
-    test_runner_version = '1.1.1'
+    test_runner_version = '1.2.0-alpha04'
 
     domainDependecies = [
             rxKotlin       : "io.reactivex.rxjava2:rxkotlin:${rxkotlin_version}",
@@ -64,10 +193,13 @@ ext {
             truth  : "com.google.truth:truth:${truth_version}"
     ]
 
-    appDependencies = [
-            kotlin_stdlib: "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
-            core_ktx     : "androidx.core:core-ktx:$core_ktx_version",
-            app_compat   : "androidx.appcompat:appcompat:$app_compat_version",
+//    app = [
+//            kotlin_stdlib        : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
+//            core_ktx             : "androidx.core:core-ktx:$core_ktx_version",
+//            app_compat           : "androidx.appcompat:appcompat:$app_compat_version",
+//            material             : "com.google.android.material:material:$material_version",
+//            constraint_layout    : "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
+//            life_cycle_extensions: "androidx.lifecycle:lifecycle-extensions:$life_cycle_extensions_version"
 //            rxKotlin             : "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version",
 //            rxAndroid            : "io.reactivex.rxjava2:rxandroid:${rxandroid_version}",
 //            glide                : "com.github.bumptech.glide:glide:${glide_version}",
@@ -75,18 +207,16 @@ ext {
 //            javaxInject          : "javax.inject:javax.inject:${javax_inject_version}",
 //            androidAnnotations   : "androidx.annotation:annotation:${androidx_version}",
 //            recyclerView         : "androidx.recyclerview:recyclerview:${androidx_version}",
-//            material             : "com.google.android.material:material:${androidx_version}",
-//            constraintLayout     : "androidx.constraintlayout:constraintlayout:${constraint_layout_version}",
 //            dagger               : "com.google.dagger:dagger:$dagger_version",
 //            daggerCompiler       : "com.google.dagger:dagger-compiler:${dagger_version}",
-//            daggerSupport        : "com.google.dagger:dagger-android-support:${dagger_version}",
 //            daggerProcessor      : "com.google.dagger:dagger-android-processor:${dagger_version}",
+//            daggerSupport        : "com.google.dagger:dagger-android-support:${dagger_version}",
 //            archRuntime          : "androidx.lifecycle:lifecycle-runtime:${android_arch_version}",
 //            archExtensions       : "androidx.lifecycle:lifecycle-extensions:${android_arch_version}",
 //            archCompiler         : "android.arch.lifecycle:compiler:${android_arch_version}",
 //            retrofitRxJavaAdapter: "com.squareup.retrofit2:adapter-rxjava2:${retrofit_version}",
 
-    ]
+//    ]
 
     appTestDependencies = [
             junit      : "junit:junit:${junit_version}",
