--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,8 +1,30 @@
-apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation deps.domain.kotlin
+    implementation deps.domain.rx_java
+    implementation deps.domain.javax_inject
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath deps.platform.kotlin_gradle_plugin
+    }
+}
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
