--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.hamz4k.bestposts">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.hamz4k.bestposts">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".BestPostsApplication"
             android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:usesCleartextTraffic="true"
             android:theme="@style/AppTheme"
-            android:name=".BestPostsApplication"
+            android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
         <activity
                 android:name=".ui.PostsActivity"
-                android:label="@string/title_activity_posts"
-                android:parentActivityName="androidx.appcompat.app.AppCompatActivity"
-                android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value="androidx.appcompat.app.AppCompatActivity"/>
+                android:label="@string/title_activity_posts">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:name=".ui.postdetail.PostDetailActivity"
+                android:label="@string/title_activity_detail">
         </activity>
     </application>
 
