--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion compile_sdk_version
+    compileSdkVersion deps.platform.compile_sdk_version
     defaultConfig {
         applicationId "com.hamz4k.bestposts"
-        minSdkVersion min_sdk_version
-        targetSdkVersion target_sdk_version
+        minSdkVersion deps.platform.min_sdk_version
+        targetSdkVersion deps.platform.target_sdk_version
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -46,7 +46,6 @@ dependencies {
     kapt deps.app.dagger_compiler
     kapt deps.app.dagger_processor
 
-//    implementation deps.app.app_compat
     implementation deps.app.constraint_layout
     implementation deps.app.material
     implementation deps.app.lifecycle_extensions
@@ -62,7 +61,6 @@ dependencies {
     implementation deps.app.javax_inject
 
     testImplementation deps.app.test.junit
+    testImplementation deps.app.test.truth
     testImplementation deps.app.test.mockito_kotlin
-//    testImplementation appTestDependencies.junit
-//    androidTestImplementation appTestDependencies.test_runner
 }
